--- a/dotfiles/hyprland/hyprland.conf
+++ b/dotfiles/hyprland/hyprland.conf
@@ -4,7 +4,7 @@ monitor=,preferred,auto,auto
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = waybar & hyprpaper
+exec-once = waybar & hyprpaper & gnome-keyring-daemon
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
