--- a/dotfiles/hyprland/hyprland.conf
+++ b/dotfiles/hyprland/hyprland.conf
@@ -172,8 +172,8 @@ bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
-bind = CTRL ALT, right, workspace, e+1
-bind = CTRL ALT, left, workspace, e-1
+bind = CTRL ALT, right, exec, hypr-buddy -ws-next
+bind = CTRL ALT, left, exec, hypr-buddy -ws-prev
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
