--- a/dotfiles/hyprland/hyprland.conf
+++ b/dotfiles/hyprland/hyprland.conf
@@ -4,7 +4,7 @@ monitor=,preferred,auto,auto
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = waybar & hyprpaper & gnome-keyring-daemon
+exec-once = waybar & hyprpaper & gnome-keyring-daemon & swayidle -w
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -17,7 +17,7 @@ input {
     kb_layout = us
     kb_variant =
     kb_model =
-    kb_options = altwin:swap_lalt_lwin,caps:super,terminate:ctrl_alt_bksp
+    kb_options = altwin:swap_lalt_lwin,caps:super
     kb_rules =
 
     follow_mouse = 1
@@ -84,8 +84,8 @@ dwindle {
 }
 
 master {
-    # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
+    new_is_master = false
+    new_on_top = true
 }
 
 gestures {
@@ -121,9 +121,17 @@ bind = $mainMod SHIFT, C, killactive,
 #bind = $mainMod, M, exit,
 #bind = $mainMod, E, exec, dolphin
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, P, exec, rofi -show drun
+bind = $mainMod, P, exec, rofi -show run
 #bind = $mainMod, P, pseudo, # dwindle
 
+bind = CTRL ALT, backspace, exit,
+bind = CTRL ALT, L, exec, swaylock --show-failed-attempts --indicator-idle-visible  --color 121b26 -t
+
+bind = $mainMode, space, fullscreen,
+
+bind = $mainMode, G, togglegroup,
+
+bind = $mainMode SHIFT, G, changegroupactive, f
 
 bind = $mainMod, return, layoutmsg, swapwithmaster
 bind = $mainMod, M, layoutmsg, focusmaster
