--- a/dotfiles/hyprland/hyprland.conf
+++ b/dotfiles/hyprland/hyprland.conf
@@ -3,8 +3,7 @@ monitor=,preferred,auto,auto
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
-# Execute your favorite apps at launch
-exec-once = waybar & hyprpaper & gnome-keyring-daemon & swayidle -w
+exec-once = ~/.config/hypr/startup.sh
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -110,13 +109,15 @@ device:epic-mouse-v1 {
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
+windowrulev2 = float,class:^(mpv)$
+
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, kitty
-bind = $mainMod SHIFT, return, exec, kitty
+#bind = $mainMod, Q, exec, kitty
+bind = $mainMod SHIFT, return, exec, foot
 bind = $mainMod SHIFT, C, killactive,
 #bind = $mainMod, M, exit,
 #bind = $mainMod, E, exec, dolphin
@@ -173,8 +174,8 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+bind = $mainMod, grave, togglespecialworkspace, magic
+bind = $mainMod SHIFT, grave, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
@@ -195,3 +196,7 @@ bind = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 # brightness
 bind= , XF86MonBrightnessDown, exec, brightnessctl set 5%-
 bind= , XF86MonBrightnessUp, exec, brightnessctl set +5%
+
+
+bind = SUPER SHIFT, D, exec, hyprctl keyword general:layout "dwindle"
+bind = SUPER CTRL, D, exec, hyprctl keyword general:layout "master"
