Lower scaling to 1.5
This feels more comfortable.

--- a/dotfiles/hyprland/hyprland.conf
+++ b/dotfiles/hyprland/hyprland.conf
@@ -1,12 +1,15 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
+# name,resolution,position,scale
+monitor=eDP-1,preferred,auto,1.5
+# empty name means fallback config
 monitor=,preferred,auto,auto
 
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
-
-exec-once = ~/.config/hypr/startup.sh
-
-# Source a file (multi-file configs)
-# source = ~/.config/hypr/myColors.conf
+exec-once = waybar
+exec-once = hyprpaper
+exec-once = gnome-keyring-daemon
+exec-once = swayidle -w
+exec-once = nm-applet
+exec-once = blueman-applet
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
@@ -128,7 +131,7 @@ bind = $mainMod, P, exec, rofi -show run
 bind = CTRL ALT, backspace, exit,
 bind = CTRL ALT, L, exec, swaylock --show-failed-attempts --indicator-idle-visible  --color 121b26 -t
 
-bind = $mainMode, space, fullscreen,
+bind = $mainMode, space, exec, hypr-buddy -toggle-stack
 
 bind = $mainMode, G, togglegroup,
 
