--- a/dotfiles/foot/foot.ini
+++ b/dotfiles/foot/foot.ini
@@ -5,7 +5,7 @@ term=xterm-256color
 # title=foot
 # locked-title=no
 
-# font=monospace:size=8
+font=monospace:size=10
 # font-bold=<bold variant of regular font>
 # font-italic=<italic variant of regular font>
 # font-bold-italic=<bold+italic variant of regular font>
