--- a/dotfiles/hyprland/hyprland.conf
+++ b/dotfiles/hyprland/hyprland.conf
@@ -87,7 +87,7 @@ dwindle {
 
 master {
     new_is_master = false
-    new_on_top = true
+    new_on_top = false
 }
 
 gestures {
@@ -124,7 +124,7 @@ bind = $mainMod SHIFT, return, exec, foot
 bind = $mainMod SHIFT, C, killactive,
 #bind = $mainMod, M, exit,
 #bind = $mainMod, E, exec, dolphin
-bind = $mainMod, V, togglefloating,
+bind = $mainMod, T, togglefloating,
 bind = $mainMod, P, exec, rofi -show run
 #bind = $mainMod, P, pseudo, # dwindle
 
@@ -133,9 +133,9 @@ bind = CTRL ALT, L, exec, swaylock --show-failed-attempts --indicator-idle-visib
 
 bind = $mainMode, space, exec, hypr-buddy -toggle-stack
 
-bind = $mainMode, G, togglegroup,
-
-bind = $mainMode SHIFT, G, changegroupactive, f
+# group windows (tabs)
+# bind = $mainMode, G, togglegroup,
+# bind = $mainMode SHIFT, G, changegroupactive, f
 
 bind = $mainMod, return, layoutmsg, swapwithmaster
 bind = $mainMod, M, layoutmsg, focusmaster
@@ -143,6 +143,8 @@ bind = $mainMod, J, layoutmsg, cyclenext
 bind = $mainMod, K, layoutmsg, cycleprev
 bind = $mainMod shift, J, layoutmsg, swapnext
 bind = $mainMod shift, K, layoutmsg, swapprev
+bind = $mainMod, H, exec, hypr-buddy -master-shrink
+bind = $mainMod, L, exec, hypr-buddy -master-grow
 
 #bind = $mainMod, J, togglesplit, # dwindle
 
@@ -200,6 +202,5 @@ bind = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bind= , XF86MonBrightnessDown, exec, brightnessctl set 5%-
 bind= , XF86MonBrightnessUp, exec, brightnessctl set +5%
 
-
-bind = SUPER SHIFT, D, exec, hyprctl keyword general:layout "dwindle"
-bind = SUPER CTRL, D, exec, hyprctl keyword general:layout "master"
+# bind = SUPER SHIFT, D, exec, hyprctl keyword general:layout "dwindle"
+# bind = SUPER CTRL, D, exec, hyprctl keyword general:layout "master"
