--- a/dotfiles/hyprland/hyprland.conf
+++ b/dotfiles/hyprland/hyprland.conf
@@ -113,6 +113,9 @@ device:epic-mouse-v1 {
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
 windowrulev2 = float,class:^(mpv)$
+windowrulev2 = move 100%-750 36,class:^(pavucontrol)$
+windowrulev2 = size 750 500,class:^(pavucontrol)$
+windowrulev2 = float,class:^(pavucontrol)$
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
@@ -149,10 +152,10 @@ bind = $mainMod, L, exec, hypr-buddy -master-grow
 #bind = $mainMod, J, togglesplit, # dwindle
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+# bind = $mainMod, left, movefocus, l
+# bind = $mainMod, right, movefocus, r
+# bind = $mainMod, up, movefocus, u
+# bind = $mainMod, down, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
