--- a/dotfiles/waybar/config
+++ b/dotfiles/waybar/config
@@ -84,7 +84,7 @@
             "car": "",
             "default": ["", "", ""]
         },
-        "on-click": "pavucontrol"
+        "on-click": "pavucontrol --tab=3"
     },
     "hyprland/workspaces": {
         "format": "{icon}",
