--- a/dotfiles/hyprland/hyprland.conf
+++ b/dotfiles/hyprland/hyprland.conf
@@ -1,6 +1,6 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 # name,resolution,position,scale
-monitor=eDP-1,preferred,auto,1.5
+# monitor=eDP-1,preferred,auto,1.5
 # empty name means fallback config
 monitor=,preferred,auto,auto
 
@@ -204,3 +204,5 @@ bind= , XF86MonBrightnessUp, exec, brightnessctl set +5%
 
 # bind = SUPER SHIFT, D, exec, hyprctl keyword general:layout "dwindle"
 # bind = SUPER CTRL, D, exec, hyprctl keyword general:layout "master"
+
+source = ~/.config/hypr/local.conf
