Add jerubbaal specific config

--- a/dotfiles/hyprland/hyprland.conf
+++ b/dotfiles/hyprland/hyprland.conf
@@ -144,6 +144,8 @@ bind = $mainMod, return, layoutmsg, swapwithmaster
 bind = $mainMod, M, layoutmsg, focusmaster
 bind = $mainMod, J, layoutmsg, cyclenext
 bind = $mainMod, K, layoutmsg, cycleprev
+# bind = $mainMod, J, cyclenext,
+# bind = $mainMod, K, cyclenext, prev
 bind = $mainMod shift, J, layoutmsg, swapnext
 bind = $mainMod shift, K, layoutmsg, swapprev
 bind = $mainMod, H, exec, hypr-buddy -master-shrink
