--- a/dotfiles/hyprland/hyprland.conf
+++ b/dotfiles/hyprland/hyprland.conf
@@ -10,6 +10,7 @@ exec-once = gnome-keyring-daemon
 exec-once = swayidle -w
 exec-once = nm-applet
 exec-once = blueman-applet
+exec-once = hypr-buddy -daemon
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
@@ -134,7 +135,10 @@ bind = $mainMod, P, exec, rofi -show run
 bind = CTRL ALT, backspace, exit,
 bind = CTRL ALT, L, exec, swaylock --show-failed-attempts --indicator-idle-visible  --color 121b26 -t
 
-bind = $mainMode, space, exec, hypr-buddy -toggle-stack
+bind = $mainMode ALT, space, exec, hypr-buddy -toggle-stack
+bind = $mainMode, space, exec, hypr-buddy -toggle-stack-2
+bind = $mainMode, J, exec, hypr-buddy -focus-next
+bind = $mainMode, K, exec, hypr-buddy -focus-prev
 
 # group windows (tabs)
 # bind = $mainMode, G, togglegroup,
@@ -142,8 +146,8 @@ bind = $mainMode, space, exec, hypr-buddy -toggle-stack
 
 bind = $mainMod, return, layoutmsg, swapwithmaster
 bind = $mainMod, M, layoutmsg, focusmaster
-bind = $mainMod, J, layoutmsg, cyclenext
-bind = $mainMod, K, layoutmsg, cycleprev
+bind = $mainMod ALT, J, layoutmsg, cyclenext
+bind = $mainMod ALT, K, layoutmsg, cycleprev
 # bind = $mainMod, J, cyclenext,
 # bind = $mainMod, K, cyclenext, prev
 bind = $mainMod shift, J, layoutmsg, swapnext
