Disable xwayland scaling
Small fonts is better than ugly bad scaling

--- a/dotfiles/hyprland/hyprland.conf
+++ b/dotfiles/hyprland/hyprland.conf
@@ -12,7 +12,8 @@ exec-once = nm-applet
 exec-once = blueman-applet
 exec-once = hypr-buddy -daemon
 
-# Some default env vars.
+# toolkit-specific scale for xwayland
+env = GDK_SCALE,2
 env = XCURSOR_SIZE,24
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
@@ -46,6 +47,11 @@ general {
 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
+}
+
+# unscale XWayland
+xwayland {
+  force_zero_scaling = true
 }
 
 decoration {
