--- a/dotfiles/hyprland/hyprland.conf
+++ b/dotfiles/hyprland/hyprland.conf
@@ -141,8 +141,7 @@ bind = $mainMod, P, exec, rofi -show run
 bind = CTRL ALT, backspace, exit,
 bind = CTRL ALT, L, exec, swaylock --show-failed-attempts --indicator-idle-visible  --color 121b26 -t
 
-bind = $mainMode ALT, space, exec, hypr-buddy -toggle-stack
-bind = $mainMode, space, exec, hypr-buddy -toggle-stack-2
+bind = $mainMode, space, exec, hypr-buddy -toggle-stack
 bind = $mainMode, J, exec, hypr-buddy -focus-next
 bind = $mainMode, K, exec, hypr-buddy -focus-prev
 
