Add s-f10 to toggle bling

--- a/dotfiles/hyprland/hyprland.conf
+++ b/dotfiles/hyprland/hyprland.conf
@@ -203,6 +203,9 @@ bind = $mainMod, mouse_up, workspace, e-1
 bind = CTRL ALT, right, exec, hypr-buddy -ws-next
 bind = CTRL ALT, left, exec, hypr-buddy -ws-prev
 
+# toggle bling mode
+bind = $mainMod, f10, exec, hypr-buddy -bling
+
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
@@ -215,8 +218,5 @@ bind = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 # brightness
 bind= , XF86MonBrightnessDown, exec, brightnessctl set 5%-
 bind= , XF86MonBrightnessUp, exec, brightnessctl set +5%
-
-# bind = SUPER SHIFT, D, exec, hyprctl keyword general:layout "dwindle"
-# bind = SUPER CTRL, D, exec, hyprctl keyword general:layout "master"
 
 source = ~/.config/hypr/local.conf
