--- a/dotfiles/hyprland/hyprland.conf
+++ b/dotfiles/hyprland/hyprland.conf
@@ -4,7 +4,7 @@
 # empty name means fallback config
 monitor=,preferred,auto,auto
 
-exec-once = waybar
+exec-once = nwg-panel
 exec-once = hyprpaper
 exec-once = gnome-keyring-daemon
 exec-once = swayidle -w
