Set panel layer to top
This makes the nm-applet popup show up on top of windows

--- a/dotfiles/nwg-panel/config
+++ b/dotfiles/nwg-panel/config
@@ -2,7 +2,7 @@
   {
     "name": "panel-top",
     "output": "",
-    "layer": "bottom",
+    "layer": "top",
     "position": "top",
     "controls": "right",
     "width": "auto",
@@ -34,7 +34,7 @@
       "commands": {
         "battery": ""
       },
-      "show-values": false,
+      "show-values": true,
       "interval": 1,
       "icon-size": 16,
       "hover-opens": false,
