--- a/dotfiles/hyprland/hyprland.conf
+++ b/dotfiles/hyprland/hyprland.conf
@@ -21,7 +21,7 @@ input {
     kb_layout = us
     kb_variant =
     kb_model =
-    kb_options = altwin:swap_lalt_lwin,caps:super
+    kb_options = caps:super
     kb_rules =
 
     follow_mouse = 1
@@ -32,6 +32,11 @@ input {
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+}
+
+# apple keyboard specific config
+device:apple-mtp-keyboard {
+    kb_options = altwin:swap_lalt_lwin,caps:super
 }
 
 general {
