--- a/dotfiles/hyprland/hyprland.conf
+++ b/dotfiles/hyprland/hyprland.conf
@@ -14,6 +14,7 @@ exec-once = hypr-buddy -daemon
 
 # toolkit-specific scale for xwayland
 env = GDK_SCALE,2
+env = XCURSOR_THEME,Vanilla-DMZ
 env = XCURSOR_SIZE,24
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
