--- a/dotfiles/hyprland/hyprland.conf
+++ b/dotfiles/hyprland/hyprland.conf
@@ -17,6 +17,9 @@ env = GDK_SCALE,2
 env = XCURSOR_THEME,Vanilla-DMZ
 env = XCURSOR_SIZE,24
 
+# uncomment this to get logs in /var/run/user/$UID/hypr/.../hyprland.logs
+#debug:disable_logs = false
+
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = us
@@ -36,7 +39,8 @@ input {
 }
 
 # apple keyboard specific config
-device:apple-mtp-keyboard {
+device {
+    name = apple-mtp-keyboard
     kb_options = altwin:swap_lalt_lwin,caps:super
 }
 
@@ -115,7 +119,8 @@ misc {
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-device:epic-mouse-v1 {
+device {
+    name = epic-mouse-v1
     sensitivity = -0.5
 }
 
