--- a/dotfiles/mako/config
+++ b/dotfiles/mako/config
@@ -12,8 +12,9 @@ border-radius=15
 #icons=0
 max-icon-size=64
 default-timeout=5000
+width=300
 #ignore-timeout=1
-font=monospace 14
+#font=monospace 14
 
 [urgency=low]
 border-color=#cccccc
