--- a/dotfiles/swayidle/config
+++ b/dotfiles/swayidle/config
@@ -1,2 +1,2 @@
-timeout 600 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
+timeout 600 'wlr-randr --output eDP-1 --off' resume 'wlr-randr --output eDP-1 --on'
 before-sleep 'swaylock --show-failed-attempts --indicator-idle-visible  --color 121b26 -t'
